--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@kickstartds/base": "^4.0.2",
     "@kickstartds/blog": "^4.0.2",
     "@kickstartds/core": "^4.0.2",
+    "@kickstartds/form": "^4.0.2",
     "@kickstartds/ds-agency": "^3.6.17"
   },
   "devDependencies": {
